--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
-!/src/node_modules/*/
+!/src/node_modules/
 
 # Bower
 bower_components/
